Beautified html tags

--- a/psc/templates/psc/vr_checklist_list.html
+++ b/psc/templates/psc/vr_checklist_list.html
@@ -4,124 +4,124 @@
 {{ block.super }}
 <script src="/assets/js/jquery-1.4.4.min.js" type="text/javascript" charset="utf-8"></script>
 <script type="text/javascript" charset="utf-8">
-	$(function() {
-		$("#reset").click(function () {
-			$("#id_zone").val("");
-			$("#id_state").val("");
-			$("#id_district").val("");
-			$("#id_day").val("");
-			$("#id_status").val(0);
-			$("#id_observer_id").val("");
-			$("#filter_form").submit();
-		});
-	});
+    $(function() {
+        $("#reset").click(function () {
+            $("#id_zone").val("");
+            $("#id_state").val("");
+            $("#id_district").val("");
+            $("#id_day").val("");
+            $("#id_status").val(0);
+            $("#id_observer_id").val("");
+            $("#filter_form").submit();
+        });
+    });
 </script>
 {% endblock %}
 {% block content %}
 <div class="grid_16">
-	<div class="box" style="padding-bottom:1em"> 
-		<h2>Voters' Registration Checklist</h2>
-		<div class="block">
-			<div id="filter">
-				<form action="" method="get" id="filter_form" accept-charset="utf-8">
-					<table>
-						<thead>
-							<tr>
+    <div class="box" style="padding-bottom:1em">
+        <h2>Voters' Registration Checklist</h2>
+        <div class="block">
+            <div id="filter">
+                <form action="" method="get" id="filter_form" accept-charset="utf-8">
+                    <table>
+                        <thead>
+                            <tr>
 								{% for field in filter_form %}
-								<th>{{ field.label }}</th>
+                                <th>{{ field.label }}</th>
 								{% endfor %}
-								<th>&nbsp;</th>
-								<th>&nbsp;</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
+                                <th>&nbsp;</th>
+                                <th>&nbsp;</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
 								{% for field in filter_form %}
-								<td>{{ field }}</td>
+                                <td>{{ field }}</td>
 								{% endfor %}
-								<td><input type="button" value="reset" id="reset"></td>
-								<td><input type="submit" value="filter &rarr;"></td>
-							</tr>
-						</tbody>
-					</table>
-				</form>
-			</div>
-			<table>
-				<thead>
-				<tr>
-					<th>PSC ID</th>
-					<th>Date</th>
-					<th>LGA</th>
-					<th>State/SD</th>
-					<th>Observer</th>
-					<th>Supervisor</th>
-					<th>1st</th>
-					<th>2nd</th>
-					<th>3rd</th>
-					<th>&nbsp;</th>
-				</tr>
-				</thead>
+                                <td><input type="button" value="reset" id="reset"></td>
+                                <td><input type="submit" value="filter &rarr;"></td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </form>
+            </div>
+            <table>
+                <thead>
+                    <tr>
+                        <th>PSC ID</th>
+                        <th>Date</th>
+                        <th>LGA</th>
+                        <th>State/SD</th>
+                        <th>Observer</th>
+                        <th>Supervisor</th>
+                        <th>1st</th>
+                        <th>2nd</th>
+                        <th>3rd</th>
+                        <th>&nbsp;</th>
+                    </tr>
+                </thead>
 				{% for cl in checklists.object_list %}
-				<tr{% cycle ' class="odd"' '' %}>
-					<td>{{ cl.observer.observer_id }}</td>
-					<td>{{ cl.date|date:"D d-M" }}</td>
-					<td>{{ cl.observer.location.name|default:"Uknown" }}</td>
-					<td>{{ cl.observer.location.parent.name|default:"Uknown" }}</td>					
-					<td>{{ cl.observer.name }}</td>
-					<td>{{ cl.observer.supervisor.name }}</td>
-					<td>
+                <tr{% cycle ' class="odd"' '' %}>
+                    <td>{{ cl.observer.observer_id }}</td>
+                    <td>{{ cl.date|date:"D d-M" }}</td>
+                    <td>{{ cl.observer.location.name|default:"Uknown" }}</td>
+                    <td>{{ cl.observer.location.parent.name|default:"Uknown"|truncatewords:3 }}</td>
+                    <td>{{ cl.observer.name }}</td>
+                    <td>{{ cl.observer.supervisor.name }}</td>
+                    <td>
 					{% if cl.submitted %}
-						<img src="/assets/img/status.png" width="16" height="16" alt="complete" />
+                        <img src="/assets/img/status.png" width="16" height="16" alt="complete" />
 					{% else %}
-						<img src="/assets/img/status-busy.png" width="16" height="16" alt="none" />
+                        <img src="/assets/img/status-busy.png" width="16" height="16" alt="none" />
 					{% endif %}
-					</td>
-					<td>
+                    </td>
+                    <td>
 					{% if cl.A and cl.B and cl.C and cl.G %}
 						{% if cl.D1 or cl.D2 or cl.D3 or cl.D4 %}
 							{% if cl.E1 or cl.E2 or cl.E3 or cl.E4 or cl.E5 %}
-								<img src="/assets/img/status.png" width="16" height="16" alt="complete" />
+                        <img src="/assets/img/status.png" width="16" height="16" alt="complete" />
 							{% endif %}
 						{% endif %}
 					{% else %}
 					{% if cl.A or cl.B or cl.C or cl.D1 or cl.D2 or cl.D3 or cl.D4 or cl.E1 or cl.E2 or cl.E3 or cl.E4 or cl.E5 or cl.F or cl.G %}
-						<img src="/assets/img/status-away.png" width="16" height="16" alt="incomplete" />
+                        <img src="/assets/img/status-away.png" width="16" height="16" alt="incomplete" />
 					{% else %}
-						<img src="/assets/img/status-busy.png" width="16" height="16" alt="none" />
+                        <img src="/assets/img/status-busy.png" width="16" height="16" alt="none" />
 					{% endif %}
 					{% endif %}
-					</td>
-					<td>
+                    </td>
+                    <td>
 					{% if cl.H and cl.J and cl.K and cl.M and cl.N and cl.P and cl.Q and cl.R and cl.S and cl.T and cl.U and cl.V and cl.W and cl.X and cl.Y and cl.Z and cl.AA %}
-					<img src="/assets/img/status.png" width="16" height="16" alt="complete" />
+                        <img src="/assets/img/status.png" width="16" height="16" alt="complete" />
 					{% else %}
 					{% if cl.H or cl.J or cl.K or cl.M or cl.N or cl.P or cl.Q or cl.R or cl.S or cl.T or cl.U or cl.V or cl.W or cl.X or cl.Y or cl.Z or cl.AA %}
-					<img src="/assets/img/status-away.png" width="16" height="16" alt="incomplete" />
+                        <img src="/assets/img/status-away.png" width="16" height="16" alt="incomplete" />
 					{% else %}
-					<img src="/assets/img/status-busy.png" width="16" height="16" alt="none" />
+                        <img src="/assets/img/status-busy.png" width="16" height="16" alt="none" />
 					{% endif %}
 					{% endif %}
-					</td>
-					<td><a href="{% url psc.views.vr_checklist cl.id %}">Edit</a></td>
-				</tr>
+                    </td>
+                    <td><a href="{% url psc.views.vr_checklist cl.id %}">Edit</a></td>
+                </tr>
 				{% empty %}
-				<tr>
-					<td colspan="12" class="nodata">No reports yet</td>
-				</tr>
+                <tr>
+                    <td colspan="12" class="nodata">No reports yet</td>
+                </tr>
 				{% endfor %}
-			</table>
-		</div>
+            </table>
+        </div>
 		{% if checklists.has_other_pages %}
-		<div class="paginator">
+        <div class="paginator">
 			{% if checklists.has_previous %}
-			<a href="{% query_string "page=checklists.previous_page_number" "" %}"><span>&laquo;</span></a>
+            <a href="{% query_string "page=checklists.previous_page_number" "" %}"><span>&laquo;</span></a>
 			{% endif %}
-			<span class="current">Page {{ checklists.number }} of {{ checklists.paginator.num_pages }}</span>
+            <span class="current">Page {{ checklists.number }} of {{ checklists.paginator.num_pages }}</span>
 			{% if checklists.has_next %}
-			<a href="{% query_string "page=checklists.next_page_number" "" %}"><span>&raquo;</span></a>
+            <a href="{% query_string "page=checklists.next_page_number" "" %}"><span>&raquo;</span></a>
 			{% endif %}
-		</div>
+        </div>
 		{% endif %}
-	</div>
+    </div>
 </div>
 {% endblock %}
