--- a/psc/templates/psc/dco_incident_update_form.html
+++ b/psc/templates/psc/dco_incident_update_form.html
@@ -133,7 +133,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class='parent last'>
+                    <div class='parent'>
                         <div class='first'>
                             <p>K</p>
                         </div>
@@ -146,16 +146,19 @@
                             </div>
                         </div>
                     </div>
+                    <div class='parent last'>
+                        <div class='first'>
+                            <p>&nbsp;</p>
+                        </div>
+                        <div class='third'>
+                            <div class="options buttons">
+																<input type="submit" name="submit" value="Save">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-
-
-            <div class="buttons">
-                <input type="submit" name="submit" value="Save">
-            </div>
             <div class='clear'></div>
-
-
         </div>
     </div>
 </form>
