--- a/psc/templates/psc/vr_incident_add_form.html
+++ b/psc/templates/psc/vr_incident_add_form.html
@@ -3,9 +3,7 @@
 <form method="POST" action="{% url psc.views.vr_incident_add %}" >
     <div class="grid_16">
         <div class="box">
-
             <h2>Observer Details</h2>
-            <!-- observer details group form -->
             <div class="block">
                 <div class='grandparent'>
                     <div class='parent'>
@@ -206,7 +204,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class='parent last'>
+                    <div class='parent'>
                         <div class='first'>
                             <p>Q</p>
                         </div>
@@ -219,16 +217,19 @@
                             </div>
                         </div>
                     </div>
+                    <div class='parent last'>
+                        <div class='first'>
+                            <p>&nbsp;</p>
+                        </div>
+                        <div class='third'>
+                            <div class='options buttons'>
+																<input type="submit" name="submit" value="Save">
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
-
-
-            <div class="buttons">
-                <input type="submit" name="submit" value="Save">
-            </div>
             <div class='clear'></div>
-
-
         </div>
     </div>
 </form>
