--- a/psc/templates/psc/dco_checklist_form.html
+++ b/psc/templates/psc/dco_checklist_form.html
@@ -288,6 +288,16 @@
 														<div class='options'><input name='{{ form.X.name }}' type='text' class='text numeric' value="{{ form.initial.X|default:"" }}"></div>
 												</div>
 										</div>
+										<div class='parent'>
+												<div class='first'>
+														<p>Comment</p>
+												</div>
+												<div class='third'>
+														<div class="options">
+															<input name='{{ form.comment.name }}' type= 'text'  class='text comment' value='{{ form.initial.comment|default:"" }}'>
+														</div>
+												</div>
+										</div>
 										<div class="parent last">
 												<div class='first'>
 														<p>&nbsp;</p>
