--- a/psc/templates/psc/dco_incident_add_form.html
+++ b/psc/templates/psc/dco_incident_add_form.html
@@ -166,6 +166,16 @@
                             </div>
                         </div>
                     </div>
+                    <div class='parent'>
+                        <div class='first'>
+                            <p>Comment</p>
+                        </div>
+                        <div class='third'>
+                            <div class='options'>
+                                <input name='{{ form.comment.name }}' type='text' class='text comment' value='{{ form.initial.comment }}'>
+                            </div>
+                        </div>
+                    </div>
                     <div class='parent last'>
                         <div class='first'>
                             <p>&nbsp;</p>
