--- a/psc/templates/psc/vr_incident_update_form.html
+++ b/psc/templates/psc/vr_incident_update_form.html
@@ -38,7 +38,7 @@
 												</div>
 												<div class='third'>
 														<div class='options'>
-																<input name='B' type='checkbox' class='checkbox numeric' value='True' {% if form.initial.B %} checked='checked' {% endif %}>
+																<input name='{{ form.B.name }}' type='checkbox' class='checkbox numeric' value='True' {% if form.initial.B %} checked='checked' {% endif %}>
 														</div>
 												</div>
 										</div>
@@ -51,7 +51,7 @@
 												</div>
 												<div class='third'>
 														<div class='options'>
-																<input name='C' type='checkbox' class='checkbox numeric' value='True' {% if form.initial.C %} checked='checked' {% endif %}>
+																<input name='{{ form.C.name }}' type='checkbox' class='checkbox numeric' value='True' {% if form.initial.C %} checked='checked' {% endif %}>
 														</div>
 												</div>
 										</div>
@@ -64,7 +64,7 @@
 												</div>
 												<div class='third'>
 														<div class='options'>
-																<input name='D' type='checkbox' class='checkbox numeric' value='True'{% if form.initial.D %} checked='checked' {% endif %}>
+																<input name='{{ form.D.name }}' type='checkbox' class='checkbox numeric' value='True'{% if form.initial.D %} checked='checked' {% endif %}>
 														</div>
 												</div>
 										</div>
@@ -77,7 +77,7 @@
 												</div>
 												<div class='third'>
 														<div class='options'>
-																<input name='E' type='checkbox' class='checkbox numeric' value='True' {% if form.initial.E %} checked='checked' {% endif %}>
+																<input name='{{ form.E.name }}' type='checkbox' class='checkbox numeric' value='True' {% if form.initial.E %} checked='checked' {% endif %}>
 														</div>
 												</div>
 										</div>
@@ -90,7 +90,7 @@
 												</div>
 												<div class='third'>
 														<div class='options'>
-																<input name='F' type='checkbox' class='checkbox numeric' value='True' {% if form.initial.F %} checked='checked' {% endif %}>
+																<input name='{{ form.F.name }}' type='checkbox' class='checkbox numeric' value='True' {% if form.initial.F %} checked='checked' {% endif %}>
 														</div>
 												</div>
 										</div>
@@ -103,7 +103,7 @@
 												</div>
 												<div class='third'>
 														<div class='options'>
-																<input name='G' type='checkbox' class='checkbox numeric' value='True'{% if form.initial.G %} checked='checked' {% endif %}>
+																<input name='{{ form.G.name }}' type='checkbox' class='checkbox numeric' value='True'{% if form.initial.G %} checked='checked' {% endif %}>
 														</div>
 												</div>
 										</div>
@@ -116,7 +116,7 @@
 												</div>
 												<div class='third'>
 														<div class='options'>
-																<input name='H' type='checkbox' class='checkbox numeric' value='True' {% if form.initial.H %} checked='checked' {% endif %}>
+																<input name='{{ form.H.name }}' type='checkbox' class='checkbox numeric' value='True' {% if form.initial.H %} checked='checked' {% endif %}>
 														</div>
 												</div>
 										</div>
@@ -129,7 +129,7 @@
 												</div>
 												<div class='third'>
 														<div class='options'>
-																<input name='J' type='checkbox' class='checkbox numeric' value='True' {% if form.initial.J %} checked='checked' {% endif %}>
+																<input name='{{ form.J.name }}' type='checkbox' class='checkbox numeric' value='True' {% if form.initial.J %} checked='checked' {% endif %}>
 														</div>
 												</div>
 										</div>
@@ -142,7 +142,7 @@
 												</div>
 												<div class='third'>
 														<div class='options'>
-																<input name='K' type='checkbox' class='checkbox numeric' value='True' {% if form.initial.K %} checked='checked' {% endif %}>
+																<input name='{{ form.K.name }}' type='checkbox' class='checkbox numeric' value='True' {% if form.initial.K %} checked='checked' {% endif %}>
 														</div>
 												</div>
 										</div>
@@ -155,7 +155,7 @@
 												</div>
 												<div class='third'>
 														<div class='options'>
-																<input name='M' type='checkbox' class='checkbox numeric' value='True'{% if form.initial.M %} checked='checked' {% endif %}>
+																<input name='{{ form.M.name }}' type='checkbox' class='checkbox numeric' value='True'{% if form.initial.M %} checked='checked' {% endif %}>
 														</div>
 												</div>
 										</div>
@@ -168,7 +168,7 @@
 												</div>
 												<div class='third'>
 														<div class='options'>
-																<input name='N' type='checkbox' class='checkbox numeric' value='True'{% if form.initial.N %} checked='checked' {% endif %}>
+																<input name='{{ form.N.name }}' type='checkbox' class='checkbox numeric' value='True'{% if form.initial.N %} checked='checked' {% endif %}>
 														</div>
 												</div>
 										</div>
@@ -181,7 +181,7 @@
 												</div>
 												<div class='third'>
 														<div class='options'>
-																<input name='P' type='checkbox' class='checkbox numeric' value='True'{% if form.initial.P %} checked='checked' {% endif %}>
+																<input name='{{ form.P.name }}' type='checkbox' class='checkbox numeric' value='True'{% if form.initial.P %} checked='checked' {% endif %}>
 														</div>
 												</div>
 										</div>
@@ -194,10 +194,20 @@
 												</div>
 												<div class='third'>
 														<div class='options'>
-																<input name='Q' type='checkbox' class='checkbox numeric' value='True'{% if form.initial.Q %} checked='checked' {% endif %}>
+																<input name='{{ form.Q.name }}' type='checkbox' class='checkbox numeric' value='True'{% if form.initial.Q %} checked='checked' {% endif %}>
 														</div>
 												</div>
 										</div>
+                    <div class='parent'>
+                        <div class='first'>
+                            <p>Comment</p>
+                        </div>
+                        <div class='third'>
+                            <div class='options'>
+                                <input name='{{ form.comment.name }}' type='text' class='text comment' value='{{ form.initial.comment }}'>
+                            </div>
+                        </div>
+                    </div>
 										<div class='parent last'>
 												<div class='first'>
 														<p>&nbsp;</p>
