--- a/psc/templates/psc/layout.html
+++ b/psc/templates/psc/layout.html
@@ -25,6 +25,9 @@
             <div class="grid_16">
                 <ul class="nav main">
                     <li>
+                        <a href="{% url psc.views.home %}">Dashboard</a>
+                    </li>
+                    <li>
                         <a href="{% url psc.views.vr_checklist_list %}">Voters' Registration</a>
                         <ul>
                             <li>
