--- a/psc/templates/psc/vr_checklist_form.html
+++ b/psc/templates/psc/vr_checklist_form.html
@@ -9,7 +9,7 @@
 										<!-- checklist details -->
 										<table>
 												<tr><td>Observer:</td><td>{{ checklist.observer.name }} (<strong>{{ checklist.observer.observer_id  }}</strong>)</td></tr>
-												<tr><td>Date:</td><td>{{ checklist.date|date:"d/m/Y" }}</td></tr>
+												<tr><td>Date:</td><td>{{ checklist.date|date:"D d-M" }}</td></tr>
 										</table>
 								</div>
 								<div class="clear"></div>
