--- a/psc/templates/psc/vr_incident_list.html
+++ b/psc/templates/psc/vr_incident_list.html
@@ -153,6 +153,17 @@
 				{% endfor %}
             </table>
         </div>
+        {% if checklists.has_other_pages %}
+        <div class="paginator">
+			{% if checklists.has_previous %}
+            <a href="{% query_string "page=checklists.previous_page_number" "" %}"><span>&laquo;</span></a>
+			{% endif %}
+            <span class="current">Page {{ checklists.number }} of {{ checklists.paginator.num_pages }}</span>
+			{% if checklists.has_next %}
+            <a href="{% query_string 'page=checklists.next_page_number' '' %}"><span>&raquo;</span></a>
+			{% endif %}
+        </div>
+        {% endif %}
     </div>
 </div>
 {% endblock %}
