--- a/psc/templates/psc/vr_incident_update_form.html
+++ b/psc/templates/psc/vr_incident_update_form.html
@@ -8,7 +8,7 @@
 						<div class="block">
 								<table>
 										<tr><td>Observer:</td><td>{{ incident.observer.name }} (<strong>{{ incident.observer.observer_id }}</strong>)</td></tr>
-										<tr><td>Date:</td><td>{{ incident.date|date:"d/m/Y" }}</td></tr>
+										<tr><td>Date:</td><td>{{ incident.date|date:"D d-M" }}</td></tr>
 								</table>
 						</div>
 						<div class="clear"></div>
