fixed dco incident...added form farmework to form

--- a/psc/templates/psc/dco_incident_add_form.html
+++ b/psc/templates/psc/dco_incident_add_form.html
@@ -45,7 +45,7 @@
                         </div>
                         <div class='third'>
                             <div class="options">
-                                <input name='A' type='checkbox' class='checkbox numeric' value='True' >
+                                <input name='{{ form.A.name }}' type='checkbox' class='checkbox numeric' value='True' >
                             </div>
                         </div>
                     </div>
@@ -58,7 +58,7 @@
                         </div>
                         <div class='third'>
                             <div class ="options">
-                                <input name='B' type='checkbox' class='checkbox numeric' value='True' >
+                                <input name='{{ form.B.name }}' type='checkbox' class='checkbox numeric' value='True' >
                             </div>
                         </div>
                     </div>
@@ -71,7 +71,7 @@
                         </div>
                         <div class='third'>
                             <div class="options">
-                                <input name='C' type='checkbox' class='checkbox numeric' value='True' >
+                                <input name='{{ form.C.name }}' type='checkbox' class='checkbox numeric' value='True' >
                             </div>
                         </div>
                     </div>
@@ -84,7 +84,7 @@
                         </div>
                         <div class='third'>
                             <div class="options">
-                                <input name='D' type='checkbox' class='checkbox numeric' value='True' >
+                                <input name='{{ form.D.name }}' type='checkbox' class='checkbox numeric' value='True' >
                             </div>
                         </div>
                     </div>
@@ -97,7 +97,7 @@
                         </div>
                         <div class='third'>
                             <div class="options">
-                                <input name='E' type='checkbox' class='checkbox numeric' value='True' >
+                                <input name='{{ form.E.name }}' type='checkbox' class='checkbox numeric' value='True' >
                             </div>
                         </div>
                     </div>
@@ -110,7 +110,7 @@
                         </div>
                         <div class='third'>
                             <div class="options">
-                                <input name='F' type='checkbox' class='checkbox numeric' value='True' >
+                                <input name='{{ form.F.name }}' type='checkbox' class='checkbox numeric' value='True' >
                             </div>
                         </div>
                     </div>
@@ -123,7 +123,7 @@
                         </div>
                         <div class='third'>
                             <div class="options">
-                                <input name='G' type='checkbox' class='checkbox numeric' value='True' >
+                                <input name='{{ form.G.name }}' type='checkbox' class='checkbox numeric' value='True' >
                             </div>
                         </div>
                     </div>
@@ -136,7 +136,7 @@
                         </div>
                         <div class='third'>
                             <div class="options">
-                                <input name='H' type='checkbox' class='checkbox numeric' value='True' >
+                                <input name='{{ form.H.name }}' type='checkbox' class='checkbox numeric' value='True' >
                             </div>
                         </div>
                     </div>
@@ -149,7 +149,7 @@
                         </div>
                         <div class='third'>
                             <div class="options">
-                                <input name='J' type='checkbox' class='checkbox numeric' value='True' >
+                                <input name='{{ form.J.name }}' type='checkbox' class='checkbox numeric' value='True' >
                             </div>
                         </div>
                     </div>
@@ -162,7 +162,7 @@
                         </div>
                         <div class='third'>
                             <div class="options">
-                                <input name='K' type='checkbox' class='checkbox numeric' value='True' >
+                                <input name='{{ form.K.name }}' type='checkbox' class='checkbox numeric' value='True' >
                             </div>
                         </div>
                     </div>
